stacks/k8s_utils/manifests/pod_green.yml
apiVersion: v1
kind: Pod
metadata:
  name: k-shop-green
  namespace: default
  labels:
    project: eks-security-with-security-groups
    app: k-shop-green
    role: green
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
      - name: http
        containerPort: 80
