stacks/k8s_utils/manifests/pod_red.yml
apiVersion: v1
kind: Pod
metadata:
  name: k-shop-red
  namespace: miztiik-automation-ns
  labels:
    project: eks-security-with-security-groups
    app: k-shop-red
    role: red
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
      - name: http
        containerPort: 80
